--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
   <!-- Add CSS file -->
   <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="title.css" />
+  <link rel="stylesheet" href="index.css" />
   <!-- Add jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="title.js"></script>
+  <script src="index.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width", initial-scale="1.0">
 </head>
