--- a/check.html
+++ b/check.html
@@ -17,7 +17,7 @@
   </div>
   <div class="check-elem1">
     <div class="check-left">Train number</div>
-    <div class="check-right">KTX 027</div>
+    <div class="check-right" id="trainnum">KTX 027</div>
   </div>
   <div class="check-elem1">
     <div class="check-left">Departure</div>
