--- a/time.html
+++ b/time.html
@@ -61,77 +61,97 @@
     <div class="timetable">
       <div class="time-elem">
         <div class="time-dur">06:00 -> 07:10</div>
-        <div class="time-price">13,300₩</div>
+        <div class="time-price">33,300₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">07:10 -> 08:23</div>
-        <div class="time-price">13,400₩</div>
+        <div class="time-price">33,400₩</div>
+        <div class="time-more hidden">more info</div>
+      </div>
+      <div class="time-elem">
+        <div class="time-dur">07:15 -> 11:12</div>
+        <div class="time-price">18,800₩</div>
+        <div class="time-more hidden">more info</div>
+      </div>
+      <div class="time-elem">
+        <div class="time-dur">08:22 -> 12:15</div>
+        <div class="time-price">18,900₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem" id="cannot">
         <div class="time-dur">08:30 -> 09:38</div>
-        <div class="time-price">13,400₩</div>
+        <div class="time-price">33,400₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">09:45 -> 10:55</div>
-        <div class="time-price">13,300₩</div>
+        <div class="time-price">33,300₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">11:00 -> 12:15</div>
-        <div class="time-price">13,200₩</div>
+        <div class="time-price">33,200₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">12:12 -> 13:13</div>
-        <div class="time-price">13,300₩</div>
+        <div class="time-price">33,300₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">13:30 -> 14:41</div>
-        <div class="time-price">13,200₩</div>
+        <div class="time-price">33,200₩</div>
+        <div class="time-more hidden">more info</div>
+      </div>
+      <div class="time-elem">
+        <div class="time-dur">14:00 -> 18:10</div>
+        <div class="time-price">18,900₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">14:40 -> 15:57</div>
-        <div class="time-price">13,400₩</div>
+        <div class="time-price">33,400₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">15:50 -> 17:01</div>
-        <div class="time-price">13,100₩</div>
+        <div class="time-price">33,100₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">17:00 -> 18:05</div>
-        <div class="time-price">13,200₩</div>
+        <div class="time-price">33,200₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">18:00 -> 19:10</div>
-        <div class="time-price">13,400₩</div>
+        <div class="time-price">33,400₩</div>
+        <div class="time-more hidden">more info</div>
+      </div>
+      <div class="time-elem">
+        <div class="time-dur">18:10 -> 22:22</div>
+        <div class="time-price">18,700₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem" id="cannot">
         <div class="time-dur">19:00 -> 20:07</div>
-        <div class="time-price">13,300₩</div>
+        <div class="time-price">33,300₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">20:02 -> 21:13</div>
-        <div class="time-price">13,500₩</div>
+        <div class="time-price">33,500₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">21:10 -> 22:20</div>
-        <div class="time-price">13,300₩</div>
+        <div class="time-price">33,300₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
         <div class="time-dur">22:22 -> 23:33</div>
-        <div class="time-price">13,400₩</div>
+        <div class="time-price">33,400₩</div>
         <div class="time-more hidden">more info</div>
       </div>
     </div>
