--- a/time2.html
+++ b/time2.html
@@ -17,7 +17,7 @@
   </div>
   <div class="time-elem1">
     <div class="time-left">Train number</div>
-    <div class="time-right">KTX 027</div>
+    <div class="time-right" id="trainnum">KTX 027</div>
   </div>
   <div class="time-elem1">
     <div class="time-left">Departure</div>
