--- a/time.html
+++ b/time.html
@@ -70,12 +70,12 @@
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
-        <div class="time-dur">07:15 -> 11:12</div>
+        <div class="time-dur">07:15 -> 10:12</div>
         <div class="time-price">18,800₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
-        <div class="time-dur">08:22 -> 12:15</div>
+        <div class="time-dur">08:22 -> 11:15</div>
         <div class="time-price">18,900₩</div>
         <div class="time-more hidden">more info</div>
       </div>
@@ -100,12 +100,17 @@
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
+        <div class="time-dur">12:30 -> 15:22</div>
+        <div class="time-price">18,700₩</div>
+        <div class="time-more hidden">more info</div>
+      </div>
+      <div class="time-elem">
         <div class="time-dur">13:30 -> 14:41</div>
         <div class="time-price">33,200₩</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
-        <div class="time-dur">14:00 -> 18:10</div>
+        <div class="time-dur">14:00 -> 17:10</div>
         <div class="time-price">18,900₩</div>
         <div class="time-more hidden">more info</div>
       </div>
@@ -120,6 +125,11 @@
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
+        <div class="time-dur">16:00 -> 19:09</div>
+        <div class="time-price">18,800₩</div>
+        <div class="time-more hidden">more info</div>
+      </div>
+      <div class="time-elem">
         <div class="time-dur">17:00 -> 18:05</div>
         <div class="time-price">33,200₩</div>
         <div class="time-more hidden">more info</div>
@@ -130,7 +140,7 @@
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
-        <div class="time-dur">18:10 -> 22:22</div>
+        <div class="time-dur">18:10 -> 21:13</div>
         <div class="time-price">18,700₩</div>
         <div class="time-more hidden">more info</div>
       </div>
