--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
   <div class="main-body">
     <div class="big-button" id="R">
       <img class="main-train" src="image/train.png" alt="train picture">
-      <div class="common-text">Train<br>reservation</div>
+      <div class="common-text">Train<br>Reservation</div>
     </div>
     <div class="big-button" id="C">
       <img class="main-ticket" src="image/ticket.png" alt="ticket picture">
-      <div class="common-text">Ticket<br>confirmation</div>
+      <div class="common-text">Ticket<br>History</div>
     </div>
     <div class="common-text" id="info">010-0000-0000</div>
   </div>
