--- a/check.html
+++ b/check.html
@@ -44,7 +44,7 @@
     <div class="check-right" id="passenger">Check information</div>
   </div>
   <div class="check-elem1" id="risk2">
-    <div class="check-left">Booking seats</div>
+    <div class="check-left">Booked seats</div>
     <div class="check-right" id="seats">Check information</div>
   </div>
   <div class="check-elem1">
