feat: add the orientation of the train
Added "Front" text to the first row of seats and "Back" text to the last row
- Updated HTML to include "Front" text in the middle of the first row.
- Updated HTML to include "Back" text in the middle of the last row.

--- a/seat.html
+++ b/seat.html
@@ -76,6 +76,7 @@
         <div class="seat-blank"></div>
         <div class="seat-each" id="normal">1C</div>
         <div class="seat-each" id="normal">1D</div>
+        <div class="seat-middle-text">Front</div>
       </div>
       <div class="seat-line">
         <div class="seat-each" id="normal">2A</div>
@@ -195,6 +196,7 @@
         <div class="seat-blank"></div>
         <div class="seat-each" id="normal">18C</div>
         <div class="seat-each" id="normal">18D</div>
+        <div class="seat-middle-text">Back</div> 
       </div>
     </div>
   </div>
