--- a/seat.html
+++ b/seat.html
@@ -73,7 +73,7 @@
       <div class="seat-line">
         <div class="seat-each" id="normal">1A</div>
         <div class="seat-each" id="normal">1B</div>
-        <div class="seat-middle-text">Front</div> 
+        <div class="seat-middle">Front</div>
         <div class="seat-each" id="normal">1C</div>
         <div class="seat-each" id="normal">1D</div>
       </div>
@@ -192,7 +192,7 @@
       <div class="seat-line">
         <div class="seat-each" id="normal">18A</div>
         <div class="seat-each" id="normal">18B</div>
-        <div class="seat-middle-text">Back</div> 
+        <div class="seat-middle">Back</div>
         <div class="seat-each" id="normal">18C</div>
         <div class="seat-each" id="normal">18D</div>
       </div>
