--- a/ticket2.html
+++ b/ticket2.html
@@ -39,17 +39,23 @@
     <div class="check-left">Duration</div>
     <div class="check-right" id="duration">Check information</div>
   </div>
-  <div class="check-elem2" id="risk1">
+  <div class="check-elem1" id="risk1">
     <div class="check-left">Number of passengers</div>
     <div class="check-right" id="passenger">Check information</div>
   </div>
-  <div class="check-elem1" id="risk2">
-    <div class="check-left">Booking seats</div>
-    <div class="check-right" id="seats">Check information</div>
+  <div class="check-elem5" id="risk2">
+    <div class="check-left-temp">Booked seats</div>
+    <div class="check-right-temp" id="seats">Check information</div>
   </div>
   <div class="check-elem1">
-    <div class="check-left">Price</div>
+    <div class="check-left">Total fare</div>
     <div class="check-right" id="price">Check information</div>
+  </div>
+  <div class="check-elem4">
+    <div class="check-left">QR code</div>
+    <div class="check-right">
+      <img src="./image/qr.png" alt="Dummy QR Code" class="qr-code">
+    </div>
   </div>
   <div class="ticket-request">send payment request</div>
   <div class="underbar">
