--- a/check.html
+++ b/check.html
@@ -39,16 +39,16 @@
     <div class="check-left">Duration</div>
     <div class="check-right" id="duration">Check information</div>
   </div>
-  <div class="check-elem2" id="risk1">
+  <div class="check-elem1" id="risk1">
     <div class="check-left">Number of passengers</div>
     <div class="check-right" id="passenger">Check information</div>
   </div>
   <div class="check-elem1" id="risk2">
     <div class="check-left">Booked seats</div>
-    <div class="check-right" id="seats">Check information</div>
+    <div class="check-right-temp" id="seats">Check information</div>
   </div>
   <div class="check-elem1">
-    <div class="check-left">Price</div>
+    <div class="check-left">Total fare</div>
     <div class="check-right" id="price">Check information</div>
   </div>
   <div class="underbar">
