--- a/time.html
+++ b/time.html
@@ -81,7 +81,7 @@
       </div>
       <div class="time-elem" id="cannot">
         <div class="time-dur">08:30 -> 09:38</div>
-        <div class="time-price">SOLD OUT</div>
+        <div class="time-price">Soldout</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
@@ -146,7 +146,7 @@
       </div>
       <div class="time-elem" id="cannot">
         <div class="time-dur">19:00 -> 20:07</div>
-        <div class="time-price">SOLD OUT</div>
+        <div class="time-price">Soldout</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
