Fix 9.2 & 1 Add description about Reserve

--- a/check.html
+++ b/check.html
@@ -51,6 +51,9 @@
     <div class="check-left">Total fare</div>
     <div class="check-right" id="price">Check information</div>
   </div>
+  <div class="check-instr">
+    "Reserve" Button is just temporarily reserve the ticket. <br> Do not forget to complete the payment to confirm the ticket.
+  </div>
   <div class="underbar">
     <div class="underbar-left">prev</div>
     <div class="underbar-right" id="common">reserve</div>
