fix : Version match

--- a/check.html
+++ b/check.html
@@ -43,16 +43,22 @@
     <div class="check-left">Number of passengers</div>
     <div class="check-right" id="passenger">Check information</div>
   </div>
-  <div class="check-elem1" id="risk2">
-    <div class="check-left">Booked seats</div>
+  <div class="check-elem5" id="risk2">
+    <div class="check-left-temp">Booked seats</div>
     <div class="check-right-temp" id="seats">Check information</div>
   </div>
   <div class="check-elem1">
     <div class="check-left">Total fare</div>
     <div class="check-right" id="price">Check information</div>
   </div>
-  <div class="underbar">
-    <div class="underbar-left">prev</div>
-    <div class="underbar-right" id="common">reserve</div>
+  <div class="underbar-container">
+    <div class="underbar-row">
+      <div class="underbar-left-temp1">Payment</div>
+      <div class="underbar-right-temp1">Payment request</div>
+    </div>
+    <div class="underbar-row">
+      <div class="underbar-left-temp2">prev</div>
+      <div class="underbar-right-temp2" id="common">Reserve</div>
+    </div>
   </div>
 </body>
