--- a/station.html
+++ b/station.html
@@ -13,7 +13,7 @@
 <body>
   <div class="reservation-progress">Reservation Progress</div>
   <div class="reservation-progress-more">
-    <img class="reservation-progress-arrow" src="image/reservation-arrow.png" alt="see all progresses">
+    <img class="reservation-progress-arrow" src="image/reservation-arrow-1.png" alt="see all progresses">
   </div>
   <div class="reservation-progress-table">
     <div class="progress-dummy">
@@ -69,17 +69,25 @@
     <div class="underbar-right">next</div>
   </div>
   <div class="station-listback">
-    <div class="common-header">Departure Station</div>
+    <div class="common-header"> Departure Station </div>
+
     <div class="station-list">
+      <div class="station-header"> A </div>
       <div class="station-elem">Asan</div>
+      <div class="station-header"> B </div>
       <div class="station-elem">Busan</div>
+      <div class="station-header"> C </div>
       <div class="station-elem">Changwon</div>
       <div class="station-elem">Cheonan</div>
+      <div class="station-header"> D </div>
       <div class="station-elem">Daegu</div>
       <div class="station-elem">Daejeon</div>
       <div class="station-elem">Dongdaegu</div>
       <div class="station-elem">Dongtan</div>
       <div class="station-elem">Dunnae</div>
+      <div class="station-header"> E </div>
+      <div class="station-header"> F </div>
+      <div class="station-header"> G </div>
       <div class="station-elem">Gangneung</div>
       <div class="station-elem">Gimcheon</div>
       <div class="station-elem">Gongju</div>
@@ -89,34 +97,53 @@
       <div class="station-elem">Gwangju</div>
       <div class="station-elem">Gwangmyeong</div>
       <div class="station-elem">Gyeongju</div>
+      <div class="station-header"> H </div>
       <div class="station-elem">Haengsin</div>
       <div class="station-elem">Hoengseong</div>
+      <div class="station-header"> I </div>
       <div class="station-elem">Iksan</div>
       <div class="station-elem">Incheon</div>
+      <div class="station-header"> J  </div>
       <div class="station-elem">Jinbu</div>
       <div class="station-elem">Jinju</div>
       <div class="station-elem">Jecheon</div>
       <div class="station-elem">Jeonju</div>
+      <div class="station-header"> K </div>
+      <div class="station-header"> L </div>
+      <div class="station-header"> M </div>
       <div class="station-elem">Masan</div>
       <div class="station-elem">Miryang</div>
       <div class="station-elem">Mokpo</div>
+      <div class="station-header"> N </div>
       <div class="station-elem">Naju</div>
       <div class="station-elem">Nonsan</div>
+      <div class="station-header"> O </div>
       <div class="station-elem">Osong</div>
+      <div class="station-header"> P </div>
       <div class="station-elem">Pohang</div>
       <div class="station-elem">Pyeongchang</div>
       <div class="station-elem">Pyeongtaek</div>
+      <div class="station-header"> Q </div>
+      <div class="station-header"> R </div>
+      <div class="station-header"> S </div>
       <div class="station-elem">Seodaejeon</div>
       <div class="station-elem">Seoul</div>
       <div class="station-elem">Suseo</div>
       <div class="station-elem">Suncheon</div>
       <div class="station-elem">Suwon</div>
+      <div class="station-header"> T </div>
+      <div class="station-header"> U </div>
       <div class="station-elem">Ulsan</div>
+      <div class="station-header"> V </div>
+      <div class="station-header"> W </div>
       <div class="station-elem">Wonju</div>
+      <div class="station-header"> X </div>
+      <div class="station-header"> Y </div>
       <div class="station-elem">Yeocheon</div>
       <div class="station-elem">Yeosu</div>
       <div class="station-elem">Yeongdeungpo</div>
       <div class="station-elem">Yongsan</div>
+      <div class="station-header"> Z </div>
     </div>
   </div>
 </body>
