--- a/main.html
+++ b/main.html
@@ -11,13 +11,14 @@
 <body>
   <div class="reservation-progress">010-0000-0000</div>
   <div class="main-body">
-    <div class="big-button" id="R">
+    <div class="big-button-1" id="R">
       <img class="main-train" src="image/train.png" alt="train picture">
       <div class="common-text">Train<br>Reservation</div>
     </div>
-    <div class="big-button" id="C">
+    <div class="big-button-2" id="C">
       <img class="main-ticket" src="image/ticket.png" alt="ticket picture">
       <div class="common-text">Ticket<br>History</div>
+      <div class="badge"></div> 
     </div>
     <div class="common-text" id="info">010-0000-0000</div>
   </div>
