--- a/station.html
+++ b/station.html
@@ -13,8 +13,10 @@
 <body>
   <div class="reservation-progress">Reservation Progress</div>
   <div class="reservation-progress-more">
-    <img class="reservation-progress-arrow" src="image/reservation-arrow-1.png" alt="see all progresses">
+    <img class="reservation-progress-arrow" src="image/reservation-arrow.png" alt="see all progresses">
   </div>
+  <div class="tuto-black hidden">
+    <div class="tuto-x" id="S">X</div></div>
   <div class="reservation-progress-table">
     <div class="progress-dummy">
       <div class="progress-gg" id="done"></div>
@@ -146,4 +148,6 @@
       <div class="station-header"> Z </div>
     </div>
   </div>
+  <div class="tuto-text hidden" id="T1">Click below button to check your reserved, requested, or purchased tickets</div>
+  <div class="tuto-text hidden" id="T2">Click below button to check your reserved, requested, or purchased tickets</div>
 </body>
