--- a/passenger.html
+++ b/passenger.html
@@ -13,7 +13,7 @@
 <body>
   <div class="reservation-progress">Reservation Progress</div>
   <div class="reservation-progress-more">
-    <img class="reservation-progress-arrow" src="image\reservation-arrow-1.png" alt="see all progresses">
+    <img class="reservation-progress-arrow" src="image\reservation-arrow.png" alt="see all progresses">
   </div>
   <div class="reservation-progress-table">
     <div class="progress-dummy">
@@ -79,6 +79,6 @@
   </div>
   <div class="underbar">
     <div class="underbar-left">prev</div>
-    <div class="underbar-right">next</div>
+    <div class="underbar-right" id="cannot">next</div>
   </div>
 </body>
