--- a/time.html
+++ b/time.html
@@ -13,7 +13,7 @@
 <body>
   <div class="reservation-progress">Reservation Progress</div>
   <div class="reservation-progress-more">
-    <img class="reservation-progress-arrow" src="image\reservation-arrow-1.png" alt="see all progresses">
+    <img class="reservation-progress-arrow" src="image\reservation-arrow.png" alt="see all progresses">
   </div>
   <div class="reservation-progress-table">
     <div class="progress-dummy">
@@ -81,7 +81,7 @@
       </div>
       <div class="time-elem" id="cannot">
         <div class="time-dur">08:30 -> 09:38</div>
-        <div class="time-price">Soldout</div>
+        <div class="time-price">Sold out</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
@@ -146,7 +146,7 @@
       </div>
       <div class="time-elem" id="cannot">
         <div class="time-dur">19:00 -> 20:07</div>
-        <div class="time-price">Soldout</div>
+        <div class="time-price">Sold out</div>
         <div class="time-more hidden">more info</div>
       </div>
       <div class="time-elem">
