Add senior-specific feature

--- a/main.html
+++ b/main.html
@@ -21,5 +21,6 @@
       <div class="badge"></div> 
     </div>
     <div class="common-text" id="info">010-0000-0000</div>
+    <div class="common-text" id="recent-info">0</div>
   </div>
 </body>
