--- a/main.html
+++ b/main.html
@@ -21,6 +21,6 @@
       <div class="badge"></div> 
     </div>
     <div class="common-text" id="info">010-0000-0000</div>
-    <div class="common-text" id="recent-info">0</div>
+    <div class="common-text" style="visibility:hidden" id="recent-info"></div>
   </div>
 </body>
