Add train information button

--- a/recentticket.html
+++ b/recentticket.html
@@ -27,7 +27,7 @@
       </div>
       <div class="ticket-blank"></div>
       <div class="ticket-list">
-        <div class="uncommon-header" id="cash">Train Information</div>
+        <div class="small-button" id="train-inf">Train Information</div>
       </div>
     </div>
     <div class="underbar">
