--- a/ticket3.html
+++ b/ticket3.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="common-header">Ticket Information</div>
+  <div class="tickettable">
   <div class="check-elem1">
     <div class="check-left">Date</div>
     <div class="check-right" id="date">Check information</div>
@@ -39,13 +40,13 @@
     <div class="check-left">Duration</div>
     <div class="check-right" id="duration">Check information</div>
   </div>
-  <div class="check-elem1" id="risk1">
+  <div class="check-elem2" id="risk1">
     <div class="check-left">Number of passengers</div>
     <div class="check-right" id="passenger">Check information</div>
   </div>
-  <div class="check-elem5" id="risk2">
-    <div class="check-left-temp">Booked seats</div>
-    <div class="check-right-temp" id="seats">Check information</div>
+  <div class="check-elem1" id="risk2">
+    <div class="check-left">Booked seats</div>
+    <div class="check-right" id="seats">Check information</div>
   </div>
   <div class="check-elem1">
     <div class="check-left">Total fare</div>
@@ -56,6 +57,7 @@
     <div class="check-right">
       <img src="./image/qr.png" alt="Dummy QR Code" class="qr-code">
     </div>
+  </div>
   </div>
   <div class="ticket-rr">revoke payment request</div>
   <div class="underbar">
