ticket conflict - done

--- a/tickets.html
+++ b/tickets.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-  <div class="common-header">My Tickets</div>
+  <div class="uncommon-header">My Tickets</div>
   <div class="ticket-body">
     <div class="ticket-list" id="reserve">
-      <div class="uncommon-header">Reserved</div>
+      <div class="common-header">Reserved</div>
     </div>
     <div class="ticket-blank"></div>
     <div class="ticket-list" id="request">
-      <div class="uncommon-header">Payment requested</div>
+      <div class="common-header">Payment requested</div>
     </div>
     <div class="ticket-blank"></div>
     <div class="ticket-list">
-      <div class="uncommon-header" id="cash">Purchased</div>
+      <div class="common-header" id="cash">Purchased</div>
     </div>
   </div>
   <div class="underbar">
