--- a/ticket2.html
+++ b/ticket2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="common-header">Ticket Information</div>
+  <div class="uncommon-header">Ticket Information</div>
   <div class="tickettable">
   <div class="check-elem1">
     <div class="check-left">Date</div>
