--- a/ticket2.html
+++ b/ticket2.html
@@ -11,6 +11,12 @@
 
 <body>
   <div class="uncommon-header">Ticket Information</div>
+  <div class="backfig hidden" id="QB">
+    <img src="./image/qr.png" alt="Dummy QR Code" class="bigmap">
+  </div>
+  <div class="backfig hidden" id="MB">
+    <img src="./image/map.png" alt="Dummy Map" class="bigmap">
+  </div>
   <div class="tickettable">
   <div class="check-elem1">
     <div class="check-left">Date</div>
@@ -52,10 +58,20 @@
     <div class="check-left">Total fare</div>
     <div class="check-right" id="price">Check information</div>
   </div>
+  <div class="check-elem1">
+    <div class="check-left">Platform number</div>
+    <div class="check-right" id="price">4</div>
+  </div>
   <div class="check-elem4">
     <div class="check-left">QR code</div>
     <div class="check-right">
-      <img src="./image/qr.png" alt="Dummy QR Code" class="qr-code">
+      <img src="./image/qr.png" alt="Dummy QR Code" class="qr-code" id="Q">
+    </div>
+  </div>
+  <div class="check-elem4">
+    <div class="check-left">Platform map</div>
+    <div class="check-right">
+      <img src="./image/map.png" alt="Dummy Map" class="qr-code" id="M">
     </div>
   </div>
   </div>
