--- a/main.html
+++ b/main.html
@@ -15,17 +15,16 @@
   </div>
   <div class="main-body">
     <div class="big-button-1" id="R">
-      <div class="tuto-text hidden">Click below button to reserve your ticket</div>
+      <div class="tuto-text hidden">Click below button to reserve your ticket.</div>
       <img class="main-train" src="image/train.png" alt="train picture">
       <div class="common-text">Train<br>Reservation</div>
     </div>
     <div class="big-button-2" id="C">
-      <div class="tuto-text hidden">Click below button to check your reserved, requested, or purchased tickets</div>
+      <div class="tuto-text hidden">Click below button to check your reserved, requested, or purchased tickets.</div>
       <img class="main-ticket" src="image/ticket.png" alt="ticket picture">
       <div class="common-text">Ticket<br>History</div>
       <div class="badge"></div> 
     </div>
-    <div class="common-text" id="info">010-0000-0000</div>
-    <div class="small-button" style="visibility:hidden" id="recent-info"></div>
+    <div class="small-button hidden" id="recent-info"></div>
   </div>
 </body>
