--- a/station.html
+++ b/station.html
@@ -148,6 +148,6 @@
       <div class="station-header"> Z </div>
     </div>
   </div>
-  <div class="tuto-text hidden" id="T1">Click above arrow to check the entire progress or to confirm information of your choice</div>
-  <div class="tuto-text hidden" id="T2">The next button is activated when all tasks are completed in this process</div>
+  <div class="tuto-text hidden" id="T1">Click above arrow to check the entire progress or to confirm information of your choice.</div>
+  <div class="tuto-text hidden" id="T2">The next button is activated when all tasks are completed in this process.</div>
 </body>
