--- a/select.html
+++ b/select.html
@@ -22,7 +22,7 @@
   <div class="success-message">Ticket reservation is completed successfully!</div>
   <div class="underbar hidden" id="up">
     <div class="underbar-left a">payment</div>
-    <div class="underbar-right b" id="common">send request</div>
+    <div class="underbar-right b" id="common">request</div>
   </div>
   <div class="underbar hidden">
     <div class="underbar-left c">home</div>
