check - list add

--- a/check.html
+++ b/check.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="common-header">Check Information</div>
+  <div class="tickettable">
   <div class="check-elem1">
     <div class="check-left">Date</div>
     <div class="check-right" id="date">Check information</div>
@@ -53,6 +54,7 @@
     <div class="check-right" id="price">Check information</div>
   </div>
   
+  </div>
   <div class="underbar">
     <div class="underbar-left">prev</div>
     <div class="underbar-right" id="common">reserve</div>
