--- a/request.html
+++ b/request.html
@@ -16,6 +16,7 @@
       text-align: center; /* Center align the text */
     }
     .success-message {
+      width: 350px;
       text-align: center;
       display: none;
       position: fixed;
