add payment button

--- a/ticket2.html
+++ b/ticket2.html
@@ -75,7 +75,8 @@
     </div>
   </div>
   </div>
-  <div class="ticket-request">send payment request</div>
+  <div class="ticket-request" id="U">make payment directly</div>
+  <div class="ticket-request" id="D">send payment request</div>
   <div class="underbar">
     <div class="underbar-left">prev</div>
     <div class="underbar-right" id="common">delete</div>
