fix : Modify files along with payment feature

--- a/select.html
+++ b/select.html
@@ -21,8 +21,8 @@
   </div>
   <div class="success-message">Ticket reservation is completed successfully!</div>
   <div class="underbar hidden" id="up">
-    <div class="underbar-left a">payment</div>
-    <div class="underbar-right b" id="common">request</div>
+    <div class="underbar-left a" id ="common">payment</div>
+    <div class="underbar-right b" id="common">request for payment</div>
   </div>
   <div class="underbar hidden">
     <div class="underbar-left c">home</div>
