--- a/main.html
+++ b/main.html
@@ -25,6 +25,7 @@
       <div class="common-text">Ticket<br>History</div>
       <div class="badge"></div> 
     </div>
+    <div class="common-text" id="No">No ticket purchased</div>
     <div class="small-button hidden" id="recent-info"></div>
   </div>
 </body>
