--- a/ticket4.html
+++ b/ticket4.html
@@ -1,10 +1,10 @@
 <head>
   <!-- Add CSS file -->
   <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="ticket3.css" />
+  <link rel="stylesheet" href="ticket4.css" />
   <!-- Add jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="ticket3.js"></script>
+  <script src="ticket4.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width", initial-scale="1.0">
 </head>
@@ -75,9 +75,8 @@
     </div>
   </div>
   </div>
-  <div class="ticket-rr">revoke payment request</div>
   <div class="underbar">
     <div class="underbar-left">prev</div>
-    <div class="underbar-right" id="common">delete</div>
+    <div class="underbar-right">none</div>
   </div>
 </body>
