--- a/tickets.html
+++ b/tickets.html
@@ -20,8 +20,8 @@
       <div class="common-header">Payment requested</div>
     </div>
     <div class="ticket-blank"></div>
-    <div class="ticket-list">
-      <div class="common-header" id="cash">Purchased</div>
+    <div class="ticket-list" id="purchase">
+      <div class="common-header">Purchased</div>
     </div>
   </div>
   <div class="underbar">
