--- a/station.html
+++ b/station.html
@@ -20,6 +20,7 @@
   <div class="reservation-progress-table">
     <div class="progress-dummy">
       <div class="progress-gg" id="done"></div>
+      <img class="progress-home" id="homebutton" src="image/home.png">
     </div>
     <div class="progress-elem">
       <div class="progress-gg" id="current-progress"></div>
