fix : Tutorial refinement

--- a/station.html
+++ b/station.html
@@ -149,6 +149,6 @@
       <div class="station-header"> Z </div>
     </div>
   </div>
-  <div class="tuto-text hidden" id="T1">Click above arrow to check the entire progress or to confirm information of your choice.</div>
-  <div class="tuto-text hidden" id="T2">The next button is activated when all tasks are completed in this process.</div>
+  <div class="tuto-text hidden" id="T1"> #Tip 1 : Click "above arrow" to move through entire progress or to modify certain information about the booking.</div>
+  <div class="tuto-text hidden" id="T2"> #Tip 2 : The "next button" is activated when all tasks are completed in the current process.</div>
 </body>
