fix : Modify menu name
prev => prev / home

--- a/tickets.html
+++ b/tickets.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="underbar">
-    <div class="underbar-left">prev</div>
+    <div class="underbar-left">prev / home</div>
     <div class="underbar-right" id="common">none</div>
   </div>
 </body>
