To Do list 3, 4

--- a/tickets.html
+++ b/tickets.html
@@ -28,4 +28,13 @@
     <div class="underbar-left">prev / home</div>
     <div class="underbar-right" id="common">none</div>
   </div>
+
+  <div id="popup" class="hide layer">
+    <div class="content">
+      <p>
+        * Alert : Your payment deadline is about a minute away.
+      </p>
+    </div>
+  </div>
+  
 </body>
