fix : Resolve problem with badge

--- a/main.html
+++ b/main.html
@@ -23,8 +23,11 @@
       <div class="tuto-text hidden">#Tip 2 : Click "below button" to check your reserved, requested, or purchased tickets.</div>
       <img class="main-ticket" src="image/ticket.png" alt="ticket picture">
       <div class="common-text">Ticket<br>History</div>
+      <div class= "badge"></div>
     </div>
     <div class="common-text" id="No">No ticket purchased</div>
     <div class="small-button hidden" id="recent-info"></div>
   </div>
 </body>
+
+
