--- a/station.html
+++ b/station.html
@@ -18,7 +18,7 @@
   <div class="tuto-black hidden">
     <div class="tuto-x" id="S">X</div></div>
   <div class="reservation-progress-table">
-    <div class="progress-dummy">
+    <div class="progress-homebar">
       <div class="progress-gg" id="done"></div>
       <img class="progress-home" id="homebutton" src="image/home.png">
     </div>
