--- a/seat.html
+++ b/seat.html
@@ -16,7 +16,7 @@
     <img class="reservation-progress-arrow" src="image\reservation-arrow.png" alt="see all progresses">
   </div>
   <div class="reservation-progress-table">
-    <div class="progress-dummy">
+    <div class="progress-homebar">
       <div class="progress-gg" id="done"></div>
       <img class="progress-home" id="homebutton" src="image/home.png">
     </div>
