feat : Quick assistance

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="common-header">Log In</div>
+  <div class="common-header-1">Log In</div>
   <div class="login-body">
     <img class="login-message" src="image/message.png" alt="code message">
     <div class="login-info">Enter your<br>phone number.</div>
