--- a/ticket4.html
+++ b/ticket4.html
@@ -75,6 +75,7 @@
     </div>
   </div>
   </div>
+  <div class="ticket-request">Quick Assistance</div>
   <div class="underbar">
     <div class="underbar-left">prev</div>
     <div class="underbar-right">none</div>
