Change Reservation progres bar design

--- a/station.html
+++ b/station.html
@@ -13,7 +13,7 @@
 <body>
   <div class="reservation-progress">Reservation Progress</div>
   <div class="reservation-progress-more">
-    <img class="reservation-progress-arrow" src="image/reservation-arrow.png" alt="see all progresses">
+    <img class="reservation-progress-arrow" src="image/reservation-arrow-1.png" alt="see all progresses">
   </div>
   <div class="tuto-black hidden">
     <div class="tuto-x" id="S">X</div></div>
